@startuml
skinparam defaultFontSize 12
scale max 800 width
top to bottom direction
skinparam padding 2
skinparam linetype ortho

title 3.3 — Compliance Audit: Entity Relationships

entity "tbl_business_profile" as BP {
  * business_profile_id : UUID <<PK>>
  --
  * user_id             : UUID <<FK>>
  categories            : TEXT
  ...
}

entity "tbl_localized_promotional_content" as LPC {
  * content_id          : UUID <<PK>>
  --
  * business_profile_id : UUID <<FK>>
  * selected_market     : VARCHAR
  generated_caption     : TEXT
  approval_status       : BOOLEAN
  ...
}

entity "tbl_creative_direction_output" as CDO {
  * creative_direction_id : UUID <<PK>>
  --
  * business_profile_id   : UUID <<FK>>
  * selected_market       : VARCHAR
  visual_tone             : TEXT
  shot_list_recommendations : TEXT
  approval_status         : BOOLEAN
  ...
}

entity "tbl_compliance_evaluation_result" as CER {
  * evaluation_id          : UUID <<PK>>
  --
  * business_profile_id    : UUID <<FK>>
  * selected_market        : VARCHAR
  caption                  : TEXT
  cas_score                : DOUBLE
  vas_score                : DOUBLE
  hcs_score                : DOUBLE
  omcs_score               : DOUBLE
  score                    : INTEGER
  compliance_threshold     : VARCHAR
  aligned_items            : TEXT
  gap_items                : TEXT
  mismatches               : TEXT
  compliance_interpretation : TEXT
  source                   : VARCHAR
  revision_number          : INTEGER
  approval_status          : BOOLEAN
  evaluated_at             : TIMESTAMPTZ
}

entity "tbl_compliance_revision_history" as CRH {
  * revision_id         : UUID <<PK>>
  --
  * business_profile_id : UUID <<FK>>
  * original_eval_id    : UUID <<FK>>
  * selected_market     : VARCHAR
  * revision_number     : INTEGER
  submitted_caption     : TEXT
  cas_score             : DOUBLE
  omcs_score            : DOUBLE
  compliance_threshold  : VARCHAR
  submitted_at          : TIMESTAMPTZ
}

note bottom of CER
  <<Stage 1 — Submitted>>
    1 row per submission
    revision_number = 1 on first audit

  <<Stage 2 — Scored>>
    cas_score  — SBERT E5 cosine similarity (V5/V6)
    vas_score  — Groq multimodal (V6)
    hcs_score  — Deterministic 6-rule checker (V9)
    omcs_score — (0.35 × CAS) + (0.45 × VAS) + (0.20 × HCS)

  Indexes:
    idx_compliance_eval_profile_market
      (business_profile_id, selected_market, evaluated_at DESC)

  Migration history:
    V5 — initial columns (score, threshold, aligned, gaps)
    V6 — added cas_score, vas_score, omcs_score, revision_number
    V9 — added hcs_score
end note

note bottom of CRH
  Created only when revision_number > 1.
  original_eval_id FK links to the first
  evaluation for full resubmission lineage.

  Index:
    idx_compliance_revision_profile
      (business_profile_id, selected_market)
end note

note right of LPC
  Context source for CAS:
  approved captions used as
  the semantic similarity baseline.
end note

note right of CDO
  Context source for VAS + HCS Rule 6:
  visual_tone and shot_list_recommendations
  fetched when approval_status = true.
end note

BP ||--o{ CER : "evaluated per\nsubmission"
CER ||--o{ CRH : "tracks revision\nlineage"
LPC }o--|| BP : "CAS baseline\n(approved captions)"
CDO }o--|| BP : "VAS + HCS Rule 6\ncontext"

@enduml
